button alignment correction complete

--- a/CollabSavvy.css
+++ b/CollabSavvy.css
@@ -5,7 +5,7 @@
     font-style: normal;
 }
 .borderStyle{
-    height: 35rem;
+    height: 28rem;
     width: auto;
     background-color: #EAEAEA;
 }
